<resources>
    <string name="app_name">PiedoMètre</string>
    <string name="steps">Steps</string>
    <string name="training">Training</string>
    <string name="speed">Speed</string>
    <string name="stats">Stats</string>
    <string name="start_training">Start</string>
    <string name="type">Type</string>
    <string name="time">Time</string>
    <string name="km_h">km/h</string>
    <string name="start_time_00">00:00:00</string>
    <string name="start_speed_0">0.0</string>
    <string name="title_activity_profile">profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="training_type_running">running</string>
    <string name="training_type_cycling">cycling</string>
    <string name="training_type_hiking">hiking</string>
    <string name="end_training">End</string>
    <string name="pause_training">PAUSE</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="EditDialogTitle">Edit your information</string>
    <string name="FirstEditDialogTitle">Welcome to PiedoMètre! </string>
    <string name="FirstEditDialogMessage">Enter valid information. We trust you´ll be happy, sir! </string>
    <string name="your_profile">Your Profile</string>
    <string name="weight">Weight:</string>
    <string name="step_length">Step length:</string>
    <string name="daily_steps">Daily Steps:</string>
    <string name="name">"Name: "</string>
    <string name="input_weight">WEIGHT</string>
    <string name="input_name">NAME</string>
    <string name="input_step_length">LENGTH</string>
    <string name="input_daily_steps">DAILY STEPS</string>
    <string name="no_trainings">Unfortunately no Trainings recorded yet</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="zero_number">0</string>
    <string name="profile">Profile</string>
    <string name="profile_icon">profile_icon</string>
    <string name="piedometre_icon">piedometre_icon</string>
    <string name="stats_icon">stats_icon</string>
    <string name="piedometre">PiedoMètre</string>
    <string name="edit">Edit</string>
    <string name="trends">Trends</string>

</resources>
